# Anime-Character-Re-Identification

./: .gitignore  DEIMv2 Finetune.ipynb  DINOv3 Finetune Anime.ipynb  README.md  RT-DETR Finetune Anime.ipynb  YOLO26 Finetune  app.py  check_database.py  core.py  database.py  deimv2_dinov3_l_anime_finetune.yml  deimv2_finetune.yml  finetune.ipynb  get_attention_map.py  inference.py  main.py  model.py  pyproject.toml  safetensors.py  video_inference.py
DEIMv2/configs/dataset/: anime_detection.yml
DEIMv2/configs/deimv2/: deimv2_dinov3_l_anime_finetune.yml
model/: best_stg2.onnx  log.txt  test_results.txt
results/: log.txt
