[project]
name = "anime-character-re-identification"
version = "0.2.0"
description = "Anime character tracking system with re-identification capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.14.0",
    "huggingface-hub>=1.13.0",
    "lancedb>=0.30.2",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.7.0",
    "umap-learn>=0.5.12",
]
