[project]
name = "anime-character-re-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.14.0",
    "lancedb>=0.30.2",
    "numpy>=2.4.4",
    "onnxruntime>=1.26.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
